# hlin

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-image.yml  ci.yml
hlin/: __init__.py  audit.py  auth.py  cli.py  commands.py  db.py  feeds.py  ics.py  models.py  notify.py  recall.py  seed_data.py  settings.py  store.py
hlin/static/: drop.js
hlin/templates/: _contacts_main.html  _person_main.html  audit.html  base.html  contacts.html  dashboard.html  login.html  person.html
hlin/web/: __init__.py  _forms.py  audit.py  auth.py  contacts.py  feeds.py  views.py
migrations/: env.py
migrations/versions/: 138c7afb590c_add_user_person_id_and_audit_log.py  6b8239a7a7eb_initial_schema.py  ab25b9671d73_add_user_table.py  ca620174a68f_add_appointment_notes.py
tests/: conftest.py  test_audit.py  test_auth.py  test_commands.py  test_crud.py  test_feeds.py  test_ics.py  test_identity.py  test_models.py  test_notify.py  test_recall.py  test_seed.py
