[project]
name = "hlin"
version = "0.4.0"
description = "Self-hosted household care and contacts tracker with read-only CalDAV feeds."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Eelco Wesemann", email = "6771014+sgaduuw@users.noreply.github.com" }]
dependencies = [
    "flask>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "icalendar>=7.2.0",
    "gunicorn>=26.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hlin"]

[tool.ruff]
target-version = "py314"
line-length = 100
# Alembic-generated migrations are not hand-maintained; don't lint them.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
